--- a/book_parts/stats/00-numpy-pandas-primer.ipynb
+++ b/book_parts/stats/00-numpy-pandas-primer.ipynb
@@ -13,7 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## NumPy:书店销售数据\n",
+    "## NumPy: 书店销售数据\n",
     "\n",
     "以书店销售数据为背景，我们将依次介绍numpy的数组创建、操作、四则运算、聚合函数和布尔筛选。这样的结构将有助于清晰地展示每个概念在实际情况中的应用。\n",
     "\n",
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +255,7 @@
    "source": [
     "在这个例子中，我们将使用一个关于书店的数据集，包含书籍的名称、价格、销售数量和评分。通过这个例子，我们将演示如何使用pandas进行数据的创建、操作、排序和文件的读写。\n",
     "\n",
-    "## Pandas：书店数据管理\n",
+    "## Pandas: 书店数据管理\n",
     "\n",
     "### 导入pandas库\n",
     "首先，导入pandas库并为其常用的别名`pd`："
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -360,7 +360,7 @@
        "4  Book5     95        25     4.1"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -489,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -519,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -555,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -586,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -617,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -649,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -684,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -710,7 +710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
