聚类但没练习

--- a/book_parts/stats/03-linear_reg.ipynb
+++ b/book_parts/stats/03-linear_reg.ipynb
@@ -7,6 +7,12 @@
    "source": [
     "# 线性回归（初步）\n",
     "\n",
+    "快速提示：\n",
+    "\n",
+    "1. 经济学中的回归，基本目标是解释2个变量之间的关系：x如何影响y？\n",
+    "2. 这里更重视解释变量的系数 $\\beta_i$ 及其显著性，而不是太关心 $R^2$ 等统计量\n",
+    "3. 因此，回归模型的设计，以及对系数的进行统计检验以及解释，是经济学中回归的重点。\n",
+    "\n",
     "## 基本多元回归\n"
    ]
   },
