--- a/book_parts/stats/05-factor-analysis.ipynb
+++ b/book_parts/stats/05-factor-analysis.ipynb
@@ -8,12 +8,13 @@
     "\n",
     "快速提示：\n",
     "\n",
-    "1. 因子分析的主要目标是降维：把大量的变量缩减为较少的因子\n",
+    "1. 因子分析的主要目标是降维：把大量的变量缩减为较少的因子。\n",
     "2. 主要过程包括：\n",
     "   - 选择因子数量\n",
     "   - 计算成分矩阵，对因子进行解释和有意义的命名\n",
     "   - 计算因子得分\n",
     "3. 还有另一种常见的降维方法“主成分分析PCA”，不是本节内容。但是学会本节之后，看PCA的教程也会很容易上手。\n",
+    "4. 本节忽略数学过程，主要解释原理和实践。\n",
     "\n",
     "\n",
     "## 介绍因子分析\n",
@@ -437,6 +438,26 @@
    "metadata": {},
    "source": [
     "## 提取几个变量？\n",
+    "\n",
+    "在进行因子分析时,确定提取因子的数量是一个重要的问题。以下是几种常用的确定提取因子数量的方法:\n",
+    "\n",
+    "1. 特征值大于1原则(Kaiser准则):\n",
+    "   该方法保留特征值大于1的因子。特征值代表了每个因子可以解释的变量方差量。当一个因子的特征值小于1时,意味着该因子解释的方差量还不如一个单个变量。因此,通常认为特征值大于1的因子是应该保留的。\n",
+    "\n",
+    "2. 碎石图(Scree Plot):\n",
+    "   碎石图是一个特征值与因子数量的折线图。通过观察折线图的形状,可以确定应该保留的因子数量。通常,我们寻找折线图中的\"拐点\",即折线开始变得平缓的地方。拐点之前的因子被认为是应该保留的。\n",
+    "\n",
+    "3. 方差解释率:\n",
+    "   该方法根据因子解释总方差的比例来决定保留的因子数量。通常,我们希望保留的因子能够解释足够多的总方差,比如60%或70%。可以逐步增加因子数量,直到累积方差解释率达到满意的水平。\n",
+    "\n",
+    "4. 平行分析(Parallel Analysis):\n",
+    "   平行分析通过随机数据模拟来确定应该保留的因子数量。它生成与实际数据相同样本量和变量数的随机数据集,并计算其特征值。然后,将实际数据的特征值与随机数据的特征值进行比较。只保留那些实际数据特征值大于随机数据特征值的因子。\n",
+    "\n",
+    "5. 理论或先验知识:\n",
+    "   在某些情况下,研究者可能根据理论或先验知识已经知道应该提取的因子数量。这种情况下,可以直接指定提取的因子数量。\n",
+    "\n",
+    "在实践中,通常综合考虑多种方法的结果,并结合研究问题的背景知识来决定提取的因子数量。此外,还需要考虑因子的可解释性和稳定性。提取的因子应该有明确的解释,并且在不同的样本中具有一致性。\n",
+    "\n",
     "\n",
     "### 特征值"
    ]
@@ -2513,9 +2534,12 @@
     "   1. 3号因子（用你取的名称），在男性和女性之间有没有显著差异？\n",
     "   2. 1号因子（用你取的名称），会因为教育程度的不同而不同吗？\n",
     "   3. 5号因子（用你取的名称），如何随着年龄而改变？\n",
-    "3. 注意：处理之前记得剔除缺失值，如果你的数据名为`df`，则用`df.dropna(inplace = True)`即可剔除`df`中的缺失值。\n",
-    "4. 提示：方法都在前面的章节，可以看每章开头的快速提示。\n",
-    "5. 其他：这是开放式问题，原则上没有标准答案，但肯定有合理的答案。\n"
+    "   \n",
+    "注意：\n",
+    "\n",
+    "1. 处理之前记得剔除缺失值，如果你的数据名为`df`，则用`df.dropna(inplace = True)`即可剔除`df`中的缺失值。\n",
+    "2. 方法都在前面的章节，可以看每章开头的快速提示。\n",
+    "3. 这是开放式问题，原则上没有标准答案，但肯定有合理的答案。\n"
    ]
   }
  ],
