--- a/book_parts/stats/05-factor-analysis.ipynb
+++ b/book_parts/stats/05-factor-analysis.ipynb
@@ -437,7 +437,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 提取几个变量？\n",
+    "## 提取几个因子？\n",
     "\n",
     "在进行因子分析时,确定提取因子的数量是一个重要的问题。以下是几种常用的确定提取因子数量的方法:\n",
     "\n",
@@ -624,21 +624,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 217,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "根据特征值大于1的原则,应提取 6 个因子。\n"
+      "根据特征值大于1的原则，应提取6个因子，此时可以解释总体方差的58.01%。\n"
      ]
     }
    ],
    "source": [
     "# 根据特征值大于1的原则确定要提取的因子数量\n",
     "num_factors = sum(eigenvalues > 1)\n",
-    "print(f\"根据特征值大于1的原则,应提取 {num_factors} 个因子。\")"
+    "print(\n",
+    "    f\"根据特征值大于1的原则，应提取{num_factors}个因子，此时可以解释总体方差的{(eigenvalues[:num_factors].sum() / len(eigenvalues)):.2%}。\"\n",
+    ")"
    ]
   },
   {
