--- a/book_parts/data_processing/11-pandas.ipynb
+++ b/book_parts/data_processing/11-pandas.ipynb
@@ -197,6 +197,137 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
+        "## Series的创建"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Series可以视为二维表格的一列。我们先用`pd.Series()`函数构建"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 6,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "0    a\n",
+              "1    b\n",
+              "2    c\n",
+              "3    d\n",
+              "dtype: object"
+            ]
+          },
+          "execution_count": 6,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "# 使用pd.Series构建一列，参数可以是一个序列结构，比如一个List\n",
+        "x = pd.Series([\"a\", \"b\", \"c\", \"d\"])\n",
+        "x"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "此时默认的index（看左侧）是从0开始的整数，并且这一列没有名称。我们可以用索引访问Series中的值。"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 9,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "'c'"
+            ]
+          },
+          "execution_count": 9,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "x[2]  # 注意2指的是index"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 11,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "0     a\n",
+              "1     b\n",
+              "2    99\n",
+              "3     d\n",
+              "dtype: object"
+            ]
+          },
+          "execution_count": 11,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "# 当然也可以写入\n",
+        "x[2] = 99\n",
+        "x"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "创建的时候可以指定index和name，name后面会成为DataFrame（二维表格，即多个列Series的横向合并）中这一列的标题。"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 13,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Alice      85\n",
+            "Bob        92\n",
+            "Charlie    78\n",
+            "David      90\n",
+            "Name: score, dtype: int64\n",
+            "Alice的分数是: 85\n"
+          ]
+        }
+      ],
+      "source": [
+        "# 创建一个简单的 Series，指定index和name\n",
+        "grades = pd.Series(\n",
+        "    [85, 92, 78, 90], index=[\"Alice\", \"Bob\", \"Charlie\", \"David\"], name=\"score\"\n",
+        ")\n",
+        "\n",
+        "# 打印 Series\n",
+        "print(grades)\n",
+        "\n",
+        "# 通过索引获取数据\n",
+        "print(\"Alice的分数是:\", grades[\"Alice\"])"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "## DataFrame的创建"
       ]
     },
@@ -674,6 +805,26 @@
         "# 读取工作目录下的data文件夹下的basic_info.xlsx文件\n",
         "# 保存到df变量\n",
         "df = pd.read_excel(\"data/basic_info.xlsx\")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "注意：如果read_excel出错，提示你缺少`openpyxl`包（你应该可以看懂出错信息），那么按照这个包可以用以下方法二选一：\n",
+        "\n",
+        "1. 可以在任何一个python单元格中执行以下命令（开头有感叹号）：\n",
+        "\n",
+        "```\n",
+        "!pip install -i https://pypi.tuna.tsinghua.edu.cn/simple openpyxl\n",
+        "```\n",
+        "\n",
+        "2. 或者在anaconda prompt（开始菜单中有）执行（开头没感叹号）：\n",
+        "\n",
+        "```\n",
+        "pip install -i https://pypi.tuna.tsinghua.edu.cn/simple openpyxl\n",
+        "```\n",
+        "\n"
       ]
     },
     {
@@ -4735,9 +4886,30 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### 小练习\n",
+        "### 行列基本操作练习\n",
         "\n",
-        "在数据中，1994年（及）以后的成立的，深圳市上市公司中，注册资本最大和最小的是哪家？\n"
+        "继续利用上述`basic_info.xlsx`数据，建立一个新的ipynb文件（完整学号-姓名-行列基本操作练习.ipynb），完成以下练习。（题目如果要求打印DF，都只打印前5行）\n",
+        "\n",
+        "**练习1：基础操作**\n",
+        "\n",
+        "从 DataFrame `df` 中选择 `股票代码` 和 `股票简称` 两列，并保存到变量 `selected_columns`。然后选择 `股票代码` 为 `000002` 的行，并仅显示 `公司成立日期` 和 `注册资本` 两列，保存到变量 `selected_row`。打印 `selected_columns` 和 `selected_row`。\n",
+        "\n",
+        "**练习2：列运算与删除列**\n",
+        "\n",
+        "在 `df` 中添加一个新列 `注册资本（亿）`，其值为 `注册资本` 列的值除以 10^8，然后删除 `注册资本` 列。保存修改后的 DataFrame到变量 `df_modified`，并打印前5行。\n",
+        "\n",
+        "**练习3：按条件筛选与排序**\n",
+        "\n",
+        "筛选出 `所属省份` 为 `广东省` 且 `上市状态` 为 `正常上市` 的所有行，并按 `公司成立日期` 降序排列。将结果保存到变量 `sorted_df`，并打印 `sorted_df`。\n",
+        "\n",
+        "**练习4：复合条件筛选与字符串方法**\n",
+        "\n",
+        "筛选出 `公司成立日期` 在 `1990年` 之前且 `股票简称` 包含 `A` 字符的所有行，并创建一个新列 `成立年份`，其值为 `公司成立日期` 的年份。将结果保存到变量 `filtered_df`，并打印 `filtered_df`。\n",
+        "\n",
+        "**练习5：复杂逻辑判断和后续操作**\n",
+        "\n",
+        "将 `首次上市日期` 转换为 `datetime` 格式。筛选出 `首次上市日期` 早于 `1992-01-01` 的公司，并判断这些公司的 `注册资本（亿）` 是否大于 100 亿元。如果大于 100 亿元，则标记为 \"大公司\"，否则标记为 \"小公司\"。将这个标记作为新列 `公司规模` 加入 DataFrame。将结果保存到变量 `final_df`，并打印 `final_df`。\n",
+        "\n"
       ]
     },
     {
@@ -12018,7 +12190,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.11.4"
+      "version": "3.11.7"
     },
     "vscode": {
       "interpreter": {
