--- a/book_parts/data_processing/11-pandas.ipynb
+++ b/book_parts/data_processing/11-pandas.ipynb
@@ -8956,6 +8956,55 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
+        "### 小练习\n",
+        "\n",
+        "利用题目给出的虚拟数据df1和df2（构造虚拟数据的代码已经给出），实现如下操作（注意，每一个小题都要打印合并的结果）：\n",
+        "\n",
+        "1. **题目1：使用concat进行纵向合并**\n",
+        "   - 使用`pd.concat`函数将`df1`和`df2`按行进行合并，并设置`ignore_index=True`。\n",
+        "   \n",
+        "2. **题目2：使用concat进行横向合并**\n",
+        "   - 使用`pd.concat`函数将`df1`和`df2`按列进行合并，并设置`axis=1`。\n",
+        "\n",
+        "3. **题目3：使用merge进行内连接**\n",
+        "   - 使用`pd.merge`函数对`df1`和`df2`进行内连接（inner join），并基于`id`列进行合并。\n",
+        "\n",
+        "4. **题目4：使用merge进行左连接**\n",
+        "   - 使用`pd.merge`函数对`df1`和`df2`进行左连接（left join），并基于`id`列进行合并。\n",
+        "\n",
+        "5. **题目5：使用merge进行右连接**\n",
+        "   - 使用`pd.merge`函数对`df1`和`df2`进行右连接（right join），并基于`id`列进行合并。\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 2,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import pandas as pd\n",
+        "\n",
+        "# 创建第一个DataFrame\n",
+        "data1 = {\n",
+        "    'id': [1, 2, 3, 4],\n",
+        "    'name': ['Alice', 'Bob', 'Charlie', 'David'],\n",
+        "    'age': [24, 27, 22, 32]\n",
+        "}\n",
+        "df1 = pd.DataFrame(data1)\n",
+        "\n",
+        "# 创建第二个DataFrame\n",
+        "data2 = {\n",
+        "    'id': [3, 4, 5, 6],\n",
+        "    'name': ['Charlie', 'David', 'Edward', 'Fiona'],\n",
+        "    'salary': [50000, 54000, 58000, 60000]\n",
+        "}\n",
+        "df2 = pd.DataFrame(data2)\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "## 统计、分组与聚合\n",
         "\n",
         "先构造一个示例数据。"
