--- a/book_parts/data_processing/11-pandas.ipynb
+++ b/book_parts/data_processing/11-pandas.ipynb
@@ -8994,7 +8994,7 @@
       "source": [
         "### 小练习\n",
         "\n",
-        "见专门的ipynb文件。\n"
+        "见作业专用ipynb文件。\n"
       ]
     },
     {
@@ -10396,6 +10396,15 @@
         "# 列表推导也可以循环分组！\n",
         "# 这里略过\n",
         "[print(x) for i, x in df.groupby(\"class_id\")]"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 小练习\n",
+        "\n",
+        "见作业专用ipynb文件。"
       ]
     },
     {
