--- a/作业_数据合并_有答案.ipynb
+++ b/作业_数据合并_有答案.ipynb
@@ -717,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -769,15 +769,49 @@
        "1     B  71.50    84.00"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# 答题区\n",
-    "\n",
     "df.groupby(\"Class\").agg({\"Math\": \"mean\", \"Science\": \"mean\"}).reset_index().round(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "练习 6 结果:\n",
+      "   Class   Avg_Math  Avg_Science  Science_Participants\n",
+      "0     A  67.666667         85.0                     2\n",
+      "1     B  71.500000         85.0                     1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 合并数据集\n",
+    "merged_data = pd.merge(df1, df3, on=\"StudentID\", how=\"left\")\n",
+    "merged_data = pd.merge(\n",
+    "    merged_data, df2[[\"StudentID\", \"Science\"]], on=\"StudentID\", how=\"left\"\n",
+    ")\n",
+    "\n",
+    "# 定义聚合函数\n",
+    "aggregations = {\"Math\": \"mean\", \"Science\": [\"mean\", \"count\"]}\n",
+    "\n",
+    "# 进行分组和聚合计算\n",
+    "grouped_data = merged_data.groupby(\"Class\").agg(aggregations)\n",
+    "\n",
+    "# 重命名列\n",
+    "grouped_data.columns = [\"Avg_Math\", \"Avg_Science\", \"Science_Participants\"]\n",
+    "\n",
+    "print(\"练习 6 结果:\\n\", grouped_data.reset_index())"
    ]
   }
  ],
