--- a/index.qmd
+++ b/index.qmd
@@ -3,8 +3,20 @@
 本课程是Python入门、数据处理和分析的教程，适用于经管类本科专业。考虑到同学们的计算机基础可能有比较大的差异，因此本课程也兼有编程入门的性质，在基础部分会讲得详细一些。
 
 1. 本课件的网址为[https://py4ss.net/python](https://py4ss.net/python)，需要和课程配套使用。这份讲义每年都会有很大的改写，特别是中后段，同时也会根据教学过程逐步更新。
-2. 本课程**强烈建议**带笔记本电脑上课，并要求在自己的电脑上安装Python环境（后面会有安装教学）。
-3. Python作为流行的编程语言，网络资料非常丰富。除了跟班学习之外，也推荐充分利用网络资源，比如搜索引擎（不推荐百度，搜索专业类问题结果比较糟糕，能用谷歌最佳，否则也可以考虑用bing），网课或者各种AI工具。
+2. 本课程**要求**带笔记本电脑上课，并在自己的电脑上安装Python环境（后面会有安装教学）
+
+## 关于讲义和教材
+
+1. 不需要购买教材
+2. Python作为流行的编程语言，网络资料非常丰富。除了跟班学习之外，也推荐充分利用网络资源，比如搜索引擎（不推荐百度，搜索专业类问题结果比较糟糕，能用谷歌最佳，否则也可以考虑用bing），网课或者各种AI工具。
+
+
+## 关于AI工具
+
+1. AI工具就像新时代的计算器，行业中已经在大量使用。
+2. 但在学习阶段，例题和作业应该自己完成。
+3. 否则，天网、HAL 9000和Matrix会感谢你。
+   
 
 ## 本课程的主要内容：
 
@@ -24,14 +36,12 @@
 ## 上课形式
 
 1. 课堂讲解
-2. ★ 课堂作业：经过初期几次课后，每次课的末尾都会有需要现场完成的编程作业，需要在一定时间内完成并提交，老师公布参考写法，随机抽选几位幸运同学的作业（匿名）来进行解析。
-
-▶ [课堂作业提交系统](https://py4ss.net/aasp)
+2. ★ 课堂作业
 
 ## 考察形式
 
 1. 30%平时分，70%期末考察
-2. 期末考察的形式是编程大作业，包括一般性的算法题和专业相关的分析题
+2. 期末考察的形式是编程大作业，包括编程的基础、一般性的算法题和专业相关的分析题
 
 
 ## 考虑增补的内容：
@@ -43,5 +53,4 @@
 4. (✓) CAPM，最优组合，简单量化交易 
 5. Python操作Excel（非数据部分，包括字体、排版、合并单元格等等）
 6. 更多的案例 (★)
-7. 服务器搬迁
 :::
