--- a/book_parts/python_basics/00-install.qmd
+++ b/book_parts/python_basics/00-install.qmd
@@ -52,13 +52,11 @@ https://mirrors.tuna.tsinghua.edu.cn/anaconda/archive/Anaconda3-2024.06-1-MacOSX
 **注意**：
 
 1. 安装时请选择“**Just Me**（仅为我安装）”，而不要选“All Users”。
-2. **推荐安装在默认路径**，免去后面的进一步设置。
+2. **推荐安装在默认路径**，免去后面的进一步设置（**新手强烈推荐**）。
 
 **更换安装路径**
 
-有2个原因可能会让你换安装路径：1. 你的用户名是中文，使得默认的路径中包含中文。2. 你的C盘空间不足。
-
-如果你更换了安装路径，后面有可能在vscode（我们写代码编辑器）中要额外指定，见下一节的内容。
+如果你更换了安装路径，比如你的C盘空间不足，后面有可能在vscode（我们写代码编辑器）中要额外指定，见后续的内容。
 
 ### 检查安装
 
@@ -106,7 +104,7 @@ https://mirrors.tuna.tsinghua.edu.cn/anaconda/archive/Anaconda3-2024.06-1-MacOSX
 
 至此，编程环境已经搭建完成。
 
-### 本节要求
+## 本节要求
 
 1. 完成安装：anaconda, vscode + 插件
 2. 检查：Anaconda Prompt可以正常运行，在你的开始菜单里有
