--- a/book_parts/python_basics/01-run-python.qmd
+++ b/book_parts/python_basics/01-run-python.qmd
@@ -137,6 +137,10 @@ Python中，对变量赋值使用1个等号 “`=`”。
 2. 要进行交互式的python编程，要首先进入[Python的交互式环境](#python_interactive)中！
 
 
+## 本节要求
+
+1. 在windows系统下显示文件的扩展名
+2. 在Python的交互环境中计算1+2
 
 ## 补充：路径
 
