--- a/book_parts/python_basics/04-data-structures.qmd
+++ b/book_parts/python_basics/04-data-structures.qmd
@@ -224,13 +224,13 @@ print(4 in a)
 
 ### List 练习（元素和常用操作）
 
-1. 创建一个名为my_list的列表，包含以下元素：1, 3, 5, 7, 9。然后创建一个变量element，将其设置为列表中的第四个元素。
+1. 创建一个名为my_list的列表，包含以下元素：1, 3, 5, 7, 9。然后创建一个变量element，将其赋值为列表中的第四个元素。
 
-2. 创建一个名为my_list的列表，包含以下元素：2, 4, 6, 8。使用append方法将10添加到列表的末尾，然后创建一个变量length，将其设置为列表的长度。
+2. 创建一个名为my_list的列表，包含以下元素：2, 4, 6, 8。使用append方法将10添加到列表的末尾，然后创建一个变量length，将其赋值为列表的长度。
 
-3. 创建一个名为my_list的列表，包含以下元素：1, 9, 3, 7。使用insert方法在9和3之间插入一个值为5的元素，然后创建一个变量max_value，将其设置为列表中的最大值。
+3. 创建一个名为my_list的列表，包含以下元素：1, 9, 3, 7。使用insert方法在9和3之间插入一个值为5的元素，然后创建一个变量max_value，将其赋值为列表中的最大值。
 
-4. 创建一个名为my_list的列表，包含以下元素：2.2, 3.3, 1.1, 4.4。使用remove方法删除元素1.1，然后创建一个变量min_value，将其设置为列表中的最小值。
+4. 创建一个名为my_list的列表，包含以下元素：2.2, 3.3, 1.1, 4.4。使用remove方法删除元素1.1，然后创建一个变量min_value，将其赋值为列表中的最小值。
    
 提交范例：
 
