--- a/book_parts/python_basics/04-data-structures.qmd
+++ b/book_parts/python_basics/04-data-structures.qmd
@@ -662,7 +662,7 @@ print(class_size)
 ### 访问字典数据
 
 
-字典数据的访问，和List或者Tuple一样，都是用中括号`[]`，但提供的数据的索引index，而是key（键名）
+字典数据的访问，和List或者Tuple一样，都是用中括号`[]`，但提供的不是数据的索引index，而是key（键名）
 
 ```{python}
 # 获取一班的人数：
@@ -737,7 +737,7 @@ print(len(class_size))
 
 ### 别名与拷贝
 
-和List一样，如果用一个dict为另一个dict赋值，那么2个变量和指向同一个数据，对其中一个数据的修改，会使得另一个变量中的数据也改变（毕竟只是同一个数据的2个名字）
+和List一样，如果用一个dict为另一个dict赋值，那么2个变量名会指向同一个数据，对其中一个数据的修改，会使得另一个变量中的数据也改变（毕竟只是同一个数据的2个名字）
 
 要避免这一点，同样使用`.copy()`函数，拷贝一个dict。具体和List一样，这里不再重复。
 
@@ -810,8 +810,8 @@ print(all_items)
 
 注意
 
-1.最外层的中括号`[]`：这是一个List
-2.每一个元素的小括号`()`：每一个元素是一个Tuple
+1. 最外层的中括号`[]`：这是一个List
+2. 每一个元素的小括号`()`：每一个元素是一个Tuple
 
 看看第一个元素是什么？
 ```{python}
