--- a/book_parts/python_basics/05-control-and-loops.qmd
+++ b/book_parts/python_basics/05-control-and-loops.qmd
@@ -106,7 +106,9 @@ weight = 80.5
 
 练习2：判断闰年：从year, 判断是否为闰年?
 
-提示：能被4整除但不能被100整除的 或者 能被400整除 那么就是闰年
+提示1: 闰年: 年份能被4整除但不能被100整除的 或者 能被400整除
+
+提示2: 判断一个数字能否被某个数整除，可以判断其余数（取余运算是`%`）是否为0，如`a % 2 == 0`如果为`True`则为偶数。
 
 注：可以用多层的条件语句，或者用多个逻辑运算来写。
 
