函数小练习

--- a/book_parts/python_basics/06-function.qmd
+++ b/book_parts/python_basics/06-function.qmd
@@ -200,9 +200,28 @@ print(do_noting())
 
 结合前面的学习内容：
 
-1. 实现一个函数`my_count()`，计算并返回一个列表的元素数量，但不要使用`len()`函数。应该可以得到：`my_count([2,3,4,5]) == 4`
+1. 实现一个函数`my_count()`，计算并返回一个列表的元素数量，但不要使用自带的`len()`函数。
 
-2. 实现一个函数`my_max_len()`，找到一个字符串列表中最长的字符串，但不要使用`max()`函数。应该可以得到`my_max_len(['a','bb','ccc']) == 'ccc'`。
+```{python}
+#| eval: false
+print(my_count([2,3,4,5])) # 应该输出 4
+```
+
+2. 实现一个函数`my_max_len()`，找到一个字符串列表中最长的字符串，但不要使用自带的`max()`函数。
+
+```{python}
+#| eval: false
+print(my_max_len(['a','bbb','cc'])) # 应该输出 'bbb'
+```
+
+3. 实现一个函数`find_min_max()`，一个查找列表中最大和最小值，并返回一个元组.
+
+```{python}
+#| eval: false
+print(find_min_max([1, 5, 3, 9, 2, 7]))  # 应该输出 (1, 9)
+print(find_min_max([-5, 0, 10, -10, 5]))  # 应该输出 (-10, 10)
+```
+
 
 
 ## 参数
@@ -242,6 +261,8 @@ print(power(5))  # 调用函数不传递n的值，使用默认值，结果为25
 print(power(3, 3))  # 调用函数传递n的值，使用传递值，结果为27
 
 ```
+
+
 
 
 ### 打包（packing）：处理不定数量的参数
@@ -486,7 +507,7 @@ a = 100      # 全局变量a
 def func():
     a = a + 1  # a + 1这个a系统认为是局部变量，但这个函数没有局部的a
     print(a)   # 全局变量a
-      
+
 func()
 ```
 
