--- a/book_parts/python_basics/05-control-and-loops.qmd
+++ b/book_parts/python_basics/05-control-and-loops.qmd
@@ -541,14 +541,15 @@ for i in range (1,10,2):
 
 
 ## 更多练习
-求1~100之间能被7整除，但不能同时被5整除的所有整数。For和While版本
 
-求列表（或者元组）平均值。For和While版本
+1. 求1~100之间能被7整除，但不能同时被5整除的所有整数。分别写For和While版本
+
+2. 求以下列表平均值。分别写For和While版本。
 ```{python}
 score = [70, 90, 78, 85, 97, 94, 65, 80]
 
 ```
-进阶思考题：二分查找法
+3. 进阶思考题：二分查找法
 
 对于一个排序的List，找到某一个元素的位置
 
