--- a/book_parts/case_study/35-association_rule.ipynb
+++ b/book_parts/case_study/35-association_rule.ipynb
@@ -18,7 +18,7 @@
     "\n",
     "import seaborn as sns\n",
     "\n",
-    "sns.set() # 默认用seaborn的绘图样式\n",
+    "sns.set_theme() # 默认用seaborn的绘图样式\n",
     "\n",
     "plt.rcParams[\"font.sans-serif\"]=[\"Microsoft YaHei\"] #设置字体。如果不设置，中文会乱码。这里采用微软雅黑'Microsoft YaHei'，如果显示不正常，也可以使用黑体'SimHei'或者宋体'SimSun'等\n",
     "plt.rcParams[\"axes.unicode_minus\"]=False #该语句解决图像中的“-”负号的乱码问题\n",
