--- a/book_parts/data_processing/11-pandas.ipynb
+++ b/book_parts/data_processing/11-pandas.ipynb
@@ -10404,7 +10404,110 @@
       "source": [
         "### 小练习\n",
         "\n",
-        "见作业专用ipynb文件。"
+        "# 练习题1：计算基本统计量\n",
+        "'''\n",
+        "根据数据框df，完成以下操作：\n",
+        "a) 计算每个班级的数学平均分\n",
+        "b) 找出Python成绩的最高分和最低分\n",
+        "c) 统计每个班级的人数\n",
+        "'''\n",
+        "# 答案1：\n",
+        "# a) 按班级计算数学平均分\n",
+        "class_math_mean = df.groupby('class_id')['math'].mean()\n",
+        "\n",
+        "# b) Python成绩的最高分和最低分\n",
+        "python_max = df['python'].max()\n",
+        "python_min = df['python'].min()\n",
+        "\n",
+        "# c) 统计每个班级的人数\n",
+        "class_counts = df['class_id'].value_counts()\n",
+        "\n",
+        "# 练习题2：条件筛选\n",
+        "'''\n",
+        "请完成以下筛选操作：\n",
+        "a) 找出数学成绩大于80分的学生\n",
+        "b) 找出数学和Python都及格(>=60)的学生\n",
+        "c) 统计每个班级有多少人数学成绩大于班级平均分\n",
+        "'''\n",
+        "# 答案2：\n",
+        "# a) 数学成绩大于80分的学生\n",
+        "good_math = df[df['math'] > 80]\n",
+        "\n",
+        "# b) 数学和Python都及格的学生\n",
+        "pass_both = df[(df['math'] >= 60) & (df['python'] >= 60)]\n",
+        "\n",
+        "# c) 统计高于班级平均分的人数\n",
+        "class_means = df.groupby('class_id')['math'].transform('mean')\n",
+        "above_avg = df[df['math'] > class_means].groupby('class_id').size()\n",
+        "\n",
+        "# 练习题3：排名与分组统计\n",
+        "'''\n",
+        "请完成以下操作：\n",
+        "a) 计算每个班级中数学成绩的最好名次\n",
+        "b) 找出每个班级Python成绩的前2名\n",
+        "c) 计算每个班级的数学和Python平均分，并按总平均分从高到低排序\n",
+        "'''\n",
+        "# 答案3：\n",
+        "# a) 每个班级数学最好名次\n",
+        "best_math_rank = df.groupby('class_id')['math_rank'].min()\n",
+        "\n",
+        "# b) 每个班级Python前2名\n",
+        "top2_python = df.sort_values('python', ascending=False).groupby('class_id').head(2)\n",
+        "\n",
+        "# c) 班级总成绩排名\n",
+        "class_avg = df.groupby('class_id')[['math', 'python']].mean()\n",
+        "class_avg['total_avg'] = class_avg.mean(axis=1)\n",
+        "class_avg_sorted = class_avg.sort_values('total_avg', ascending=False)\n",
+        "\n",
+        "# 练习题4：数据透视表\n",
+        "'''\n",
+        "请使用数据透视表完成以下操作：\n",
+        "a) 创建一个数据透视表，显示每个班级的数学和Python平均分\n",
+        "b) 计算每个班级的及格率（分别计算数学和Python）\n",
+        "c) 找出数学和Python成绩差距最大的班级\n",
+        "'''\n",
+        "# 答案4：\n",
+        "# a) 班级平均分透视表\n",
+        "class_scores = pd.pivot_table(df, \n",
+        "                            values=['math', 'python'],\n",
+        "                            index='class_id',\n",
+        "                            aggfunc='mean')\n",
+        "\n",
+        "# b) 计算及格率\n",
+        "def pass_rate(x):\n",
+        "    return (x >= 60).mean() * 100\n",
+        "\n",
+        "class_pass_rates = pd.pivot_table(df,\n",
+        "                                values=['math', 'python'],\n",
+        "                                index='class_id',\n",
+        "                                aggfunc=pass_rate)\n",
+        "\n",
+        "# c) 成绩差距\n",
+        "class_scores['score_diff'] = abs(class_scores['math'] - class_scores['python'])\n",
+        "max_diff_class = class_scores['score_diff'].idxmax()\n",
+        "\n",
+        "# 练习题5：高级分组运算\n",
+        "'''\n",
+        "请完成以下高级分组运算：\n",
+        "a) 为每个学生计算其数学和Python成绩与班级平均分的差值\n",
+        "b) 计算每个班级的数学和Python成绩的中位数、标准差\n",
+        "c) 找出每个班级中数学比Python成绩好（分数高）的学生人数\n",
+        "'''\n",
+        "# 答案5：\n",
+        "# a) 计算与班级平均分的差值\n",
+        "class_math_mean = df.groupby('class_id')['math'].transform('mean')\n",
+        "class_python_mean = df.groupby('class_id')['python'].transform('mean')\n",
+        "df['math_diff_from_mean'] = df['math'] - class_math_mean\n",
+        "df['python_diff_from_mean'] = df['python'] - class_python_mean\n",
+        "\n",
+        "# b) 计算统计量\n",
+        "class_stats = df.groupby('class_id').agg({\n",
+        "    'math': ['median', 'std'],\n",
+        "    'python': ['median', 'std']\n",
+        "})\n",
+        "\n",
+        "# c) 统计数学比Python好的学生\n",
+        "better_at_math = df[df['math'] > df['python']].groupby('class_id').size()"
       ]
     },
     {
