--- a/old/hs300_test.ipynb
+++ b/old/hs300_test.ipynb
@@ -16,7 +16,7 @@
     "\n",
     "import seaborn as sns\n",
     "\n",
-    "sns.set() # 默认用seaborn的绘图样式\n",
+    "sns.set_theme() # 默认用seaborn的绘图样式\n",
     "\n",
     "plt.rcParams[\"font.sans-serif\"]=[\"SimHei\"] #设置字体。如果不设置，中文会乱码。这里采用黑体SimHei，也可以考虑其他字体，如宋体SimSun等\n",
     "plt.rcParams[\"axes.unicode_minus\"]=False #该语句解决图像中的“-”负号的乱码问题\n",
