--- a/book_parts/data_processing/12-plot.ipynb
+++ b/book_parts/data_processing/12-plot.ipynb
@@ -32006,7 +32006,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "undefined.undefined.undefined"
+   "version": "3.12.4"
   },
   "orig_nbformat": 4
  },
