聚类数据下载链接

--- a/book_parts/stats/04-clustering.ipynb
+++ b/book_parts/stats/04-clustering.ipynb
@@ -2756,7 +2756,8 @@
     "\n",
     "**读取数据**\n",
     "\n",
-    "首先，我们读取CSV文件并观察数据。"
+    "\n",
+    "首先，我们读取CSV文件并观察数据。 数据下载链接（可以右键另存为） [cluster_data.csv](data/cluster_data.csv)"
    ]
   },
   {
@@ -6046,7 +6047,7 @@
     "\n",
     "**数据准备**\n",
     "\n",
-    "我们这次采用iris数据的前20行来作为演示。"
+    "我们这次采用iris数据的前20行来作为演示。 数据下载链接（可以右键另存为） [iris.csv](data/iris.csv)"
    ]
   },
   {
