--- a/book_parts/case_study/32-basic_examples.ipynb
+++ b/book_parts/case_study/32-basic_examples.ipynb
@@ -7570,7 +7570,7 @@
     "问题3：绘制股票60000，从1月到11月的成交量的饼图\n",
     "\n",
     "1. 选择列：交易日期和交易量，设置为时间序列数据\n",
-    "2. `.resample('M').sum()`重采样为月并求和：得到月交易量的和。\n",
+    "2. `.resample('ME').sum()`重采样为月并求和：得到月交易量的和。\n",
     "3. 生成一列“月”：1-11月\n",
     "4. 绘图！"
    ]
