query不是产生视图

--- a/book_parts/data_processing/11-pandas.ipynb
+++ b/book_parts/data_processing/11-pandas.ipynb
@@ -5261,7 +5261,7 @@
     "还是那个问题：Pandas也要区分副本和视图。\n",
     "\n",
     "1. 某些操作会产生视图：比如`loc[]`，你对此进行赋值，将会修改原数据。\n",
-    "2. 某些操作会产生拷贝：比如**链式操作**，**查询语句`.query()`**。你对此赋值，不会改变原值。\n",
+    "2. 某些操作会产生拷贝：比如链式操作，`.copy()`方法，你对此赋值，不会改变原值。\n",
     "\n",
     "但问题在于：这两种操作的区分往往不明显，因此直接修改DF数据时，最好复查。"
    ]
