--- a/book_parts/case_study/33-technical_analysis.ipynb
+++ b/book_parts/case_study/33-technical_analysis.ipynb
@@ -37303,7 +37303,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "undefined.undefined.undefined"
   },
   "orig_nbformat": 4
  },
